z-index fix for item's border

--- a/src/assets/css/item.css
+++ b/src/assets/css/item.css
@@ -10,7 +10,7 @@
   position: absolute;
   height: 480px;
   width: 320px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .subtitle {
